<resources>
    <!-- General -->
    <string name="app_name">MPK</string>
    <string name="action_back">Atgal</string>
    <string name="action_next">Toliau</string>
    <!-- Drawer -->
    <string name="drawer_item1">Į pradžią</string>
    <string name="drawer_item2">Išmok medituoti</string>
    <string name="drawer_item3">Meditacijos</string>
    <string name="drawer_item4">Pažanga</string>
    <string name="drawer_item5">Rėmėjai</string>
    <!-- Stickers -->
    <string name="stickerName0">Dar neturite dovanų</string>
    <string name="stickerName1">Puikus startas</string>
    <string name="stickerName2">10 meditacijų</string>
    <string name="stickerName3">25 meditacijos</string>
    <string name="stickerName4">2 meditacijos iš eilės</string>
    <string name="stickerName5">3 meditacijos iš eilės</string>
    <string name="stickerName6">5 dienos iš eilės</string>
    <string name="stickerName7">10 dienos iš eilės</string>
    <string name="stickerName8">20 dienos iš eilės</string>
    <string name="stickerName9">31 dienos iš eilės</string>
    <string name="stickerName10">50 dienos iš eilės</string>
    <string name="stickerName11">70 dienos iš eilės</string>
    <string name="stickerName12">100 dienos iš eilės</string>
    <string name="stickerName13">150 dienos iš eilės</string>
    <string name="stickerName14">365 dienos iš eilės</string>
    <string name="stickerName15">Rytinė meditacija</string>
    <string name="stickerName16">Pietų meditacija</string>
    <string name="stickerName17">Bendras meditacijos laikas 5h</string>
    <string name="stickerName18">Bendras meditacijos laikas 50h</string>
    <string name="stickerName19">Bendras meditacijos laikas 100h</string>

    <string name="stickerAward1">Puikus startas! Jūs gavote sklandaus pakilimo ženkliuką!</string>
    <string name="stickerAward2">Jūs atlikote 10 meditacijų! Gavote traukinio ženkliuką!</string>
    <string name="stickerAward3">Jūs atlikote 25 meditacijas! Gavote automobilio ženkliuką!</string>
    <string name="stickerAward4">Jūs atlikote 2 meditacijas iš eilės! Gavote ananaso ženkliuką!</string>
    <string name="stickerAward5">Jūs atlikote 3 meditacijas iš eilės! Gavote vaivorykštės ženkliuką!</string>
    <string name="stickerAward6">Jūs praktikavotės 5 dienas iš eilės! Gavote saulės ženkliuką!</string>
    <string name="stickerAward7">Jūs praktikavotės 10 dienas iš eilės! Gavote būgno ženkliuką!</string>
    <string name="stickerAward8">Jūs praktikavotės 20 dienas iš eilės!</string>
    <string name="stickerAward9">Jūs praktikavotės 31 dienas iš eilės! Gavote ilgos kelionės ženkliuką!</string>
    <string name="stickerAward10">Jūs praktikavotės 50 dienas iš eilės! Gavote pergalės ženkliuką!</string>
    <string name="stickerAward11">Jūs praktikavotės 70 dienas iš eilės! Gavote ramybės ženkliuką!</string>
    <string name="stickerAward12">Jūs praktikavotės 100 dienas iš eilės! Gavote didvyrio ženkliuką!</string>
    <string name="stickerAward13">Jūs praktikavotės 150 dienas iš eilės! Gavote sunkaus darbo ženkliuką!</string>
    <string name="stickerAward14">Jūs praktikavotės 365 dienas iš eilės! Gavote stiprybės ženkliuką!</string>
    <string name="stickerAward15">Jūs atlikote rytinę meditaciją iki 7.00 valandos ryto ir gavote vyturio ženkliuką! </string>
    <string name="stickerAward16">Jūs atlikote pietų meditaciją nuo 12.00 iki 14.00</string>
    <string name="stickerAward17">Jūs praktikavotės 5 valandas!</string>
    <string name="stickerAward18">Jūs praktikavotės 50 valandų!</string>
    <string name="stickerAward19">Jūs praktikavotės 100 valandų!</string>
    <!-- Meditations -->
    <string name="meditation_title1">Kūno skenavimo pratimas</string>
    <string name="meditation_title2">Trijų minučių kvėpavimo/pauzės pratimas</string>
    <string name="meditation_title3">Dėmesingo kvėpavimo pratimas</string>
    <string name="meditation_title4">Kalno pratimas</string>
    <string name="meditation_title5">Dėmesingo valgymo pratimas</string>
    <string name="meditation_title6">Sėdimoji praktika</string>
    <string name="meditation_title7">Gamtos garsai</string>
    <string name="meditation_description1">Padeda tiesiogiai pajusti kūno pojūčius. Moko švelniai, tačiau valingai spręsti, kur nukreipiame dėmesį. Moko geranoriškai ir veiksmingai tvarkytis su dėmesio nukrypimais. Moko leisti viskam būti taip, kaip yra.  <b>15min</b></string>
    <string name="meditation_description1_1">Jeigu veikiame automatinio piloto režimu, daug labiau tikėtina, kad kažkas „paspaus mūsų mygtukus“. Įvykiai, vykstantys aplink mus, arba mūsų pačių mintys, jausmai bei pojūčiai (kuriuos mes tik miglotai suvokiame) gali pažadinti senus mąstymo įpročius, kurie dažnai būna neveiksmingi ir blogina nuotaiką.  </string>
    <string name="meditation_description1_2">Šios programos tikslas yra didinti sąmoningumą, kad mes galėtume kuo dažniau pasirinkti, kaip reaguosime į įvairias situacijas, užuot darę tai automatiškai. Tuo tikslu mes praktikuojamės pastebėti, kur nukrypsta mūsų dėmesys ir grąžinti jį prie pasirinkto objekto vis iš naujo.  </string>
    <string name="meditation_description1_3">Iš pradžių mes nukreipiame dėmesį į skirtingas kūno dalis, taip pratindami savo dėmesį fiksuoti į tai, kas vyksta esamuoju momentu. Kartu mes praktikuojamės valingai pasirinkti, kas bus mūsų dėmesio lauke. Toks ir yra svarbiausias kūno skenavimo, tikslas.  <b>11min</b></string>
    <string name="meditation_description2">Lavina gebėjimą  įsisąmoninti mintis, jausmus ir kūno pojūčius dabartyje, esamame momente. Šis pratimas tinkamas kaip greitosios pagalbos įrankis po patirtos stresinės situacijos. Praktikuojant šį pratimą, išmokstame neįsitraukti į neigiamas, sunkias emocijas, t.y. jos neužvaldo mūsų.  <b>5min</b></string>
    <string name="meditation_description3">Lavina dėmesingumą, sugebėjimą nukreipti dėmesį į pasirinktą objektą. Ilgainiui, praktikuojant šį pratimą , stiprėja savikontrolė, sugebėjimas suvaldyti savo impulsyvius veiksmus, mintis.  <b>9min</b></string>
    <string name="meditation_description4">Šis pratimas stiprina pasitikėjimą savimi, padeda sugrįžti į pusiausvyrą po patirto streso ar išbūti patiriamo ilgalaikio streso situacijoje.  <b>15min</b></string>
    <string name="meditation_description5">Praktikuojant šį pratimą, keičiasi santykis su maistu: labiau suvokiama kiek suvalgome, ar ištiesų valgome tai, kas mūsų organizmui naudinga ir sveika. Ilgainiui keičiasi mityba, renkamasi būtent tuos produktus, kurie yra tinkami būtent jūsų kūnui.  <b>7min</b></string>
    <string name="meditation_description6">Toliau lavina gebėjimą būti su kūne patiriamais pojūčiai.  Labiau pastebėdami savo mintis, jausmus ir pojūčius kiekvieną akimirką, mes suteikiame sau daugiau pasirinkimo laisvės ir galime išvengti senų mąstymo „bėgių“, kurie praeityje jau kėlė problemų.  Šis pratimas - meditacija lavina dėmesingumą, sugebėjimą nukreipti dėmesį į pasirinktą objektą.  <b>15min</b></string>
    <string name="meditation_description7">Padeda atsipalaiduoti, panirti į ramybės, pasitikėjimo ir saugumo būseną. <b>3min</b></string>
    <!-- Main -->
    <string name="main_button1">Tikrinti</string>
    <string name="main_title1">KAIP ŠIANDIEN JAUTIESI?</string>
    <string name="main_text1">Pasitikrink savo savijautą, išklausyk meditaciją ir pasigerink sau dieną!</string>

    <string name="main_button2">IŠMOK MEDITUOTI</string>
    <string name="main_button3">MEDITACIJOS</string>
    <string name="main_button4">MANO PAŽANGA</string>
    <string name="main_button2landscape">IŠMOK\nMEDITUOTI</string>
    <string name="main_button3landscape">MEDITACIJOS</string>
    <string name="main_button4landscape">MANO\nPAŽANGA</string>

    <string name="img_description1">Lotus posture</string>
    <string name="img_description2">Arrow</string>
    <!-- Activity1 -->
    <string name="activity1_title1">SUSTOK, KVĖPUOK IR GALVOK</string>
    <string name="activity1_text1">Užmerkite akis, giliai įkvėpkite ir galvokite kokios Jūsų mintys ir kaip jaučiasi Jūsų kūnas</string>
    <string name="activity1_button1">Pradėk</string>
    <string name="activity1_img_description">image1</string>
    <string name="animation_out">Iškvėpk</string>
    <string name="animation_in">Įkvėpk</string>
    <!-- Activity1_1 -->
    <string name="activity1_1_title">Mano fizinė būsena :</string>
    <string name="activity1_1_emo1">PUIKI</string>
    <string name="activity1_1_emo2">NORMALI</string>
    <string name="activity1_1_emo3">ĮTEMPTA</string>
    <string name="activity1_1_emo4">PRASTA</string>
    <string name="activity1_1_emo5">IŠSEKUSI</string>
    <string name="activity1_1_img_description">A picture that describes your physical state</string>
    <string name="activity1_1_button1">Toliau</string>
    <!-- Activity1_2 -->
    <string name="activity1_2_title">AŠ JAUČIUOSI…</string>
    <string name="activity1_2_img_description">A picture that shows different emotional states</string>
    <string name="activity1_2_button1">Pridėti emocijas</string>
    <string name="activity1_2_button2">Toliau</string>
    <!-- Activity1_3 -->
    <string name="activity1_3_button1">Tęsti</string>
    <string name="activity1_3_img_description1">A picture of happy state</string>
    <string name="activity1_3_img_description2">A picture of hopeful state</string>
    <string name="activity1_3_img_description3">A picture of sad state</string>
    <string name="activity1_3_img_description4">A picture of worried state</string>
    <string name="activity1_3_img_description5">A picture of angry state</string>
    <string name="activity1_3_emot1">Laiminga (-as)</string>
    <string name="activity1_3_emot2">Entuziastinga (-as)</string>
    <string name="activity1_3_emot3">Patenkinta (-as)</string>
    <string name="activity1_3_emot4">Pusiausvyra</string>
    <string name="activity1_3_emot5">Susitelkusi (-ęs)</string>
    <string name="activity1_3_emot6">Atvira (-as)</string>
    <string name="activity1_3_emot7">Išsigandusi (-ęs)</string>
    <string name="activity1_3_emot8">Susitelkusi (-ęs)</string>
    <string name="activity1_3_emot9">Nervinga (-as)</string>
    <string name="activity1_3_emot10">Liūdna (-as)</string>
    <string name="activity1_3_emot11">Įsižeidusi (-ęs)</string>
    <string name="activity1_3_emot12">Nusivylusi (-ęs)</string>
    <string name="activity1_3_emot13">Pikta (-as)</string>
    <string name="activity1_3_emot14">Pesimištiska (-as)</string>
    <string name="activity1_3_emot15">Užsisklendusi (-ęs)</string>
    <!-- Activity1_4 -->
    <string name="activity1_4_title">Daryti siūloma</string>
    <string name="item_button_text">Klausyti</string>
    <!-- Activity1_5 -->
    <string name="activity1_5_title">Pasirinkite meditaciją</string>
    <string name="activity1_5_button2">Grįžti į pradžią</string>
    <!-- Activity3 -->
    <string name="activity3_title">Meditacijų sąrašas</string>
    <string name="activity3_button_text">Klausyti</string>
    <!-- Activity4 -->
    <string name="activity4_title1">PASKUTINIS APDOVANOJIMAS</string>
    <string name="activity4_title2">VISO APDOVANOJIMŲ:</string>
    <string name="activity4_title4">DAŽNIAUSIA MEDITACIJA</string>
    <string name="activity4_error1">Dar neturite dovanų</string>
    <string name="activity4_error4">Dar neklausėte nei vieno įrašo!</string>
    <string name="activity4_title5">VISO MEDITUOTA</string>

</resources>
