<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12">

    <Space
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="4">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <CheckBox
                style="@style/checkbox"
                android:text="@string/activity1_3_emot4"
                android:id="@+id/checkBox4"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <CheckBox
                style="@style/checkbox"
                android:text="@string/activity1_3_emot5"
                android:id="@+id/checkBox5"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <CheckBox
                style="@style/checkbox"
                android:text="@string/activity1_3_emot6"
                android:id="@+id/checkBox6"/>
        </FrameLayout>
    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4" />

</LinearLayout>