<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorPrimaryLight">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/material_text_headline"
                android:text="@string/activity3_title"
                android:paddingBottom="@dimen/item_vertical_padding"
                android:paddingTop="@dimen/item_vertical_padding"
                android:layout_gravity="center"
                android:textColor="@color/primaryTextInverted"
                android:typeface="serif" />
        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/side_padding_portrait"
            android:paddingRight="@dimen/side_padding_portrait"
            android:paddingTop="@dimen/item_vertical_padding"
            android:paddingBottom="@dimen/item_vertical_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meditation_title1"
                android:textSize="@dimen/material_text_subhead"
                android:textStyle="bold"
                android:textColor="@color/primaryText"
                android:paddingBottom="@dimen/item_vertical_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meditation_description1"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/material_text_body1"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/item_vertical_padding"
                android:paddingBottom="@dimen/item_vertical_padding">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/itemButton1"
                    android:layout_weight=".4"
                    android:background="@drawable/roundedbuttondark"
                    android:textColor="@color/primaryTextInverted"
                    android:text="@string/activity3_button_text"/>
                <Space
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight=".8"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:clickable="false"
            android:background="@color/blue_A100" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/side_padding_portrait"
            android:paddingRight="@dimen/side_padding_portrait"
            android:paddingTop="@dimen/item_vertical_padding"
            android:paddingBottom="@dimen/item_vertical_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meditation_title2"
                android:textSize="@dimen/material_text_subhead"
                android:textStyle="bold"
                android:textColor="@color/primaryText"
                android:paddingBottom="@dimen/item_vertical_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meditation_description2"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/material_text_body1"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/item_vertical_padding"
                android:paddingBottom="@dimen/item_vertical_padding">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/itemButton2"
                    android:layout_weight=".4"
                    android:background="@drawable/roundedbuttondark"
                    android:textColor="@color/primaryTextInverted"
                    android:text="@string/activity3_button_text"/>
                <Space
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight=".8"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:clickable="false"
            android:background="@color/blue_A100" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/side_padding_portrait"
            android:paddingRight="@dimen/side_padding_portrait"
            android:paddingTop="@dimen/item_vertical_padding"
            android:paddingBottom="@dimen/item_vertical_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meditation_title3"
                android:textSize="@dimen/material_text_subhead"
                android:textStyle="bold"
                android:textColor="@color/primaryText"
                android:paddingBottom="@dimen/item_vertical_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meditation_description3"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/material_text_body1"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/item_vertical_padding"
                android:paddingBottom="@dimen/item_vertical_padding">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/itemButton3"
                    android:layout_weight=".4"
                    android:background="@drawable/roundedbuttondark"
                    android:textColor="@color/primaryTextInverted"
                    android:text="@string/activity3_button_text"/>
                <Space
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight=".8"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:clickable="false"
            android:background="@color/blue_A100" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/side_padding_portrait"
            android:paddingRight="@dimen/side_padding_portrait"
            android:paddingTop="@dimen/item_vertical_padding"
            android:paddingBottom="@dimen/item_vertical_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meditation_title4"
                android:textSize="@dimen/material_text_subhead"
                android:textStyle="bold"
                android:textColor="@color/primaryText"
                android:paddingBottom="@dimen/item_vertical_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meditation_description4"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/material_text_body1"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/item_vertical_padding"
                android:paddingBottom="@dimen/item_vertical_padding">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/itemButton4"
                    android:layout_weight=".4"
                    android:background="@drawable/roundedbuttondark"
                    android:textColor="@color/primaryTextInverted"
                    android:text="@string/activity3_button_text"/>
                <Space
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight=".8"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:clickable="false"
            android:background="@color/blue_A100" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/side_padding_portrait"
            android:paddingRight="@dimen/side_padding_portrait"
            android:paddingTop="@dimen/item_vertical_padding"
            android:paddingBottom="@dimen/item_vertical_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meditation_title5"
                android:textSize="@dimen/material_text_subhead"
                android:textStyle="bold"
                android:textColor="@color/primaryText"
                android:paddingBottom="@dimen/item_vertical_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meditation_description5"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/material_text_body1"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/item_vertical_padding"
                android:paddingBottom="@dimen/item_vertical_padding">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/itemButton5"
                    android:layout_weight=".4"
                    android:background="@drawable/roundedbuttondark"
                    android:textColor="@color/primaryTextInverted"
                    android:text="@string/activity3_button_text"/>
                <Space
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight=".8"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:clickable="false"
            android:background="@color/blue_A100" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/side_padding_portrait"
            android:paddingRight="@dimen/side_padding_portrait"
            android:paddingTop="@dimen/item_vertical_padding"
            android:paddingBottom="@dimen/item_vertical_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meditation_title6"
                android:textSize="@dimen/material_text_subhead"
                android:textStyle="bold"
                android:textColor="@color/primaryText"
                android:paddingBottom="@dimen/item_vertical_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meditation_description6"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/material_text_body1"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/item_vertical_padding"
                android:paddingBottom="@dimen/item_vertical_padding">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/itemButton6"
                    android:layout_weight=".4"
                    android:background="@drawable/roundedbuttondark"
                    android:textColor="@color/primaryTextInverted"
                    android:text="@string/activity3_button_text"/>
                <Space
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight=".8"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:clickable="false"
            android:background="@color/blue_A100" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/side_padding_portrait"
            android:paddingRight="@dimen/side_padding_portrait"
            android:paddingTop="@dimen/item_vertical_padding"
            android:paddingBottom="@dimen/item_vertical_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meditation_title7"
                android:textSize="@dimen/material_text_subhead"
                android:textStyle="bold"
                android:textColor="@color/primaryText"
                android:paddingBottom="@dimen/item_vertical_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meditation_description7"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/material_text_body1"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/item_vertical_padding"
                android:paddingBottom="@dimen/item_vertical_padding">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/itemButton7"
                    android:layout_weight=".4"
                    android:background="@drawable/roundedbuttondark"
                    android:textColor="@color/primaryTextInverted"
                    android:text="@string/activity3_button_text"/>
                <Space
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight=".8"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:clickable="false"
            android:background="@color/blue_A100" />
    </LinearLayout>
</ScrollView>


