<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:background="@color/colorPrimaryLight">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="8"
            android:paddingLeft="@dimen/side_padding_portrait"
            android:paddingRight="@dimen/side_padding_portrait"
            android:background="@color/blue_500">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/activity1_2_title"
                    android:id="@+id/activity1_3_title"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textColor="@color/primaryTextInverted"
                    android:textSize="@dimen/material_text_headline"
                    android:typeface="serif" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5">

                <Button
                    style="@style/btnlook"
                    android:id="@+id/activity1_3_button1"
                    android:layout_gravity="center"
                    android:text="@string/activity1_2_button1"
                    android:onClick="activity13button1_Click" />
            </FrameLayout>
        </LinearLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_weight="2"
            android:paddingLeft="@dimen/side_padding_portrait"
            android:paddingRight="@dimen/side_padding_portrait"
            android:background="@color/custom1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity1_3_image"
                android:layout_gravity="center"
                android:src="@drawable/mind_grow"
                android:contentDescription="@string/activity1_2_img_description"
                android:adjustViewBounds="true" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="12">

            <Button
                style="@style/btnlook"
                android:id="@+id/activity1_3_button2"
                android:text="@string/activity1_2_button2"
                android:onClick="activity13button2_Click"
                android:layout_weight="8"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>